--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,14 @@ html, *, body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: black;
-    font-family: sans-serif;
+    color: #5C6B74;
+    font-family: 'roboto', sans-serif;
+}
+
+h1, h2 {
+    font-family: 'Mouse Memoirs', sans-serif;
+}
+
+p {
+    margin-bottom: 5px;
 }
