--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -15,18 +15,24 @@
     justify-content: center;
     align-items: center;
     width: 95%;
-    height: 95vh;
+    height: 99vh;
     background-color: bisque;
     border: 5px solid #8f5008;
     border-radius: 50px;
 }
 
 .img {
-    width: 150px;
+    scale: 1;
+    width: 170px;
+    transition: .2s;
+}
+
+.img:active {
+    scale: .8;
 }
 
 .img-mapa {
-    height: 200px;
+    height: 30vh;
 }
 
 .content p {
@@ -119,7 +125,11 @@ label {
 }
 
 .animation-opacity {
-    animation: opacity 1s;
+    animation: opacity 2s;
+}
+
+.animation-down {
+    animation: slideDown 1.5s;
 }
 
 @keyframes grow{
@@ -135,6 +145,14 @@ label {
         transform: translateX(200px);
     }to{
         transform: translateX(0);
+    }
+}
+
+@keyframes slideDown {
+    from{
+        transform: translateY(-200px);
+    }to{
+        transform: translateY(0);
     }
 }
 
